apps/idp/production/cloudflare-gateway.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak-cloudflare
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-options: Force=true,Replace=true
spec:
  gatewayClassName: cloudflare
  listeners:
  - protocol: HTTP
    port: 80
    name: http
